tests/rosetta/out/Pascal/approximate-equality.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/approximate-equality.pas
approximate-equality.pas(31,8) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
approximate-equality.pas(33,13) Note: Call to subroutine "operator <=(const op1:Variant;const op2:Variant):Boolean;" marked as inline is not inlined
approximate-equality.pas(33,16) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
approximate-equality.pas(42,12) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
approximate-equality.pas(46,20) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
approximate-equality.pas(46,20) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
approximate-equality.pas(46,34) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
approximate-equality.pas(46,24) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
approximate-equality.pas(46,34) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
approximate-equality.pas(49,13) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
approximate-equality.pas(63,404) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crcFD0234A9"
approximate-equality.pas(63,454) Error: Incompatible types: got "TArray$1$crcE41905E8" expected "TArray$1$crcFD0234A9"
approximate-equality.pas(64,7) Error: Identifier not found "pair"
approximate-equality.pas(66,10) Error: Identifier not found "pair"
approximate-equality.pas(67,10) Error: Identifier not found "pair"
approximate-equality.pas(70,16) Error: Incompatible types: got "Constant String" expected "LongInt"
approximate-equality.pas(73,16) Error: Incompatible types: got "Constant String" expected "LongInt"
approximate-equality.pas(83) Fatal: There were 7 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
